Fixing collapse issue on Navigation

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@ $vin-red: #ff0000;
     height: 80%;
     width: 80%;
     padding: 50px;
+    
 }
 
 a.list-group-item {
@@ -22,3 +23,12 @@ a.list-group-item.active small {
 .stars {
   margin:20px auto 1px;    
 }
+
+@media (min-width: 992px){
+  
+  .navbar-expand-lg .navbar-collapse {
+   
+    display: inline-block !important;
+  }
+}
+
